[gd_scene load_steps=9 format=3 uid="uid://bh5coce6rjsyw"]

[ext_resource type="Script" path="res://UI Asset/Script/dialog_button.gd" id="1_vxp4b"]
[ext_resource type="Texture2D" uid="uid://byu31x1gksyxg" path="res://UI Asset/Sprite/fajar_assets/buttonplay1-export.png" id="1_yk8lv"]
[ext_resource type="Theme" uid="uid://la05b3bnexvl" path="res://UI Asset/Shader/theme_fajar/theme_fajar.tres" id="2_sj5f7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2l0aa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_04d7y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7k12a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_877ks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dj4d2"]

[node name="DialogItem" type="Control" node_paths=PackedStringArray("button_identity")]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_vxp4b")
button_identity = NodePath("MarginContainer/PanelContainer/Button")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_2l0aa")

[node name="Button" type="Button" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_04d7y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7k12a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_877ks")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dj4d2")
toggle_mode = true
keep_pressed_outside = true

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/PanelContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 1
texture = ExtResource("1_yk8lv")
region_rect = Rect2(2060, 10, 490, 240)
patch_margin_left = 40
patch_margin_top = 30
patch_margin_right = 140
patch_margin_bottom = 89

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 75

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Button/MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
theme = ExtResource("2_sj5f7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.333333, 0.333333, 0.333333, 0.776471)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 72
text = "Sample textnya qaqa"
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 2

[connection signal="disable_self" from="." to="." method="_on_disable_self"]
[connection signal="toggled" from="MarginContainer/PanelContainer/Button" to="." method="_on_button_toggled"]
